[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dexbot-utils"
version = "0.4.1"
description = "Common robot utility classes and functions for Dexmate robots"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["robotics", "robot", "utilities", "urdf", "dexbot"]
dependencies = ["numpy", "loguru", "dexmate-urdf", "typer"]
authors = [{ name = "Dexmate", email = "contact@dexmate.ai" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Framework :: Robot Framework :: Library",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dexmate-ai/dexbot-utils"

[project.scripts]
dexbot = "dexbot_utils.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff",
    "isort>=5.12.0",
    "pyright",
    "prek",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff.format]
quote-style = "double"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I001"]
ignore = ["F722", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pyright]
include = ["src/dexbot_utils/"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
